fix the image overflow

--- a/style.css
+++ b/style.css
@@ -330,8 +330,7 @@ button {
         padding-left: 20px;
         padding-right: 20px;
         padding-top: 20px;
-        padding-bottom: 20px;
-      }
+        padding-bottom: 20px; }
         .faq-section .faq-group .all-questions .question-answer-group:last-child {
           border-bottom: none; }
         .faq-section .faq-group .all-questions .question-answer-group label {
@@ -360,13 +359,12 @@ button {
           color: #2D3138;
           display: none;
           margin-left: 30px;
-          margin-right: 20px; 
+          margin-right: 20px;
           box-sizing: border-box;
           padding-top: 0px;
           visibility: hidden;
           max-height: 0px;
-          opacity: 0%; 
-        }
+          opacity: 0%; }
           .faq-section .faq-group .all-questions .question-answer-group .answer p {
             padding: 10px 0px; }
           .faq-section .faq-group .all-questions .question-answer-group .answer img {
@@ -382,7 +380,7 @@ button {
           display: block;
           visibility: visible;
           padding-top: 10px;
-          max-height: 800px;
+          max-height: 3000px;
           opacity: 100%;
           transition: all .3s ease-out; }
         .faq-section .faq-group .all-questions .question-answer-group input:checked ~ .question .icon {
